objects/DMAPP__DM_DVLS_Curriculum_Subscriber__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the association of named users to Curricula. These can be edited through the eLearning Admin App.</description>
    <fields>
        <fullName>DMAPP__DM_DVLS_Curriculum__c</fullName>
        <label>Dealmaker Curriculum</label>
        <referenceTo>DMAPP__DM_DVLS_Curriculum__c</referenceTo>
        <relationshipName>DVLS_Curriculum_Subscribers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DVLS_Curriculum_Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Curriculum Subscriber</label>
    <nameField>
        <label>eLearning Curriculum Subscriber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Curriculum Subscribers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>